<resources>
    <string name="app_name">GestionBinSQLite</string>
    <string name="ajout">Ajout</string>
    <string name="suppression">Suppression</string>
    <string name="modification">Modification</string>
    <string name="consultation">Consultation</string>
    <string name="title">Title</string>
    <string name="nbpage">Nb Page</string>
    <string name="ajouter">Ajouter</string>
    <string name="retour">Retour</string>
    <string name="livre">Livre</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier">Modifier</string>
</resources>
