<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAjout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajout" />

    <Button
        android:id="@+id/btnModif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modification" />

    <Button
        android:id="@+id/btnSupp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suppression" />

    <Button
        android:id="@+id/btnConsult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultation" />
</LinearLayout>