<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ajout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ajout"
        android:text="@string/ajout"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Titre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ednNb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nombre de pages"
        android:inputType="number" />

    <Button
        android:id="@+id/btnValider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:textSize="24sp" />
</LinearLayout>